have the partials, may need to add more later. On to controllers

--- a/partials/pathChoice.html
+++ b/partials/pathChoice.html
@@ -1,37 +1,4 @@
-<!DOCTYPE html>
-
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Gauntlet</title>
-  <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="styles/gauntlet.css">
-</head>
-
-<body>
-
-  <article id="game-container">
-
-   <!--  <section id="player-setup" class="card card--name">
-      <div class="card__prompt">
-        <div>RECORD YOUR NAME, ADVENTURER</div>
-        <div class="field">
-          <input type="text" autofocus="true" id="player-name" class="field__textinput">
-        </div>
-      </div>
-
-      <div class="card__button">
-        <a class="card__link btn btn--big btn--orange" 
-           href="#" 
-           next="card--class">
-          <span class="btn__prompt">></span>
-          <span class="btn__text">Select class</span>
-        </a>
-      </div>
-    </section> -->
-
-   <!--  <section id="class-select" class="card card--class">
+<section id="class-select" class="card card--class">
       <div class="card__prompt">
         <div>CHOOSE YOUR PATH</div>
         <div>
@@ -129,7 +96,6 @@
           </div>
         </div>
       </div>
-
       <div class="card__button">
         <a class="card__link btn btn--big btn--orange" 
            href="#" 
@@ -138,42 +104,4 @@
           <span class="btn__text">Select weapon</span>
         </a>
       </div>
-    </section> -->
-
-  <!--   <section id="weapon-select" class="card card--weapon">
-      <div class="card__prompt">
-        <div>choose your weapon</div>
-        <div>
-          <a class="card__back btn btn--small" 
-             href="#"
-             previous="card--class">
-            <span class="btn__prompt">&lt;</span>
-            <span class="btn__text">Back</span>
-          </a>          
-        </div>
-      </div>
-
-      <div class="card__button">
-        <a class="card__link btn btn--big btn--orange" 
-           href="#" 
-           next="card--battleground">
-          <span class="btn__prompt">></span>
-          <span class="btn__text">defeat your enemies</span>
-        </a>
-      </div>
-    </section> -->
-
-    <section id="battleground" class="card card--battleground"></section>
-
-  </article>
-
-  <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-  <script src="javascripts/weapons.js"></script>
-  <script src="javascripts/classes.js"></script>
-  <script src="javascripts/spells.js"></script>
-  <script src="javascripts/player.js"></script>
-  <script src="javascripts/enemies.js"></script>
-  <script src="javascripts/app.js"></script>
-
-</body>
-</html>
+    </section>
