set up grunt and some of the controllers

--- a/partials/playerSetup.html
+++ b/partials/playerSetup.html
@@ -1,4 +1,4 @@
-<section id="player-setup" class="card card--name">
+<section id="player-setup" class="card card--name" ng-controller="PlayerCtrl">
     <div class="card__prompt">
       <div>RECORD YOUR NAME, ADVENTURER</div>
       <div class="field">
