--- a/partials/classChoice.html
+++ b/partials/classChoice.html
@@ -1,4 +1,4 @@
-<section id="class-select" class="card card--class">
+<section id="class-select" class="card card--class" ng-controller="ClassCtrl">
       <div class="card__prompt">
         <div>CHOOSE YOUR PATH</div>
         <div>
