--- a/partials/weaponChoice.html
+++ b/partials/weaponChoice.html
@@ -1,4 +1,4 @@
- <section id="weapon-select" class="card card--weapon">
+ <section id="weapon-select" class="card card--weapon" ng-controller="WeaponCtrl">
       <div class="card__prompt">
         <div>choose your weapon</div>
         <div>
