the first partial is loading but the path isn't working correctly

--- a/partials/ClassSelect.html
+++ b/partials/ClassSelect.html
@@ -1,4 +1,4 @@
-<section id="class-select" class="card card--class" ng-controller="ClassCtrl">
+<section id="class-select" class="card card--class">
       <div class="card__prompt">
         <div>CHOOSE YOUR PATH</div>
         <div>
