--- a/partials/NameSelect.html
+++ b/partials/NameSelect.html
@@ -1,4 +1,4 @@
-<section id="player-setup" class="card card--name" ng-controller="NameSelectCtrl">
+<section id="player-setup" class="card card--name">
     <div class="card__prompt">
       <div>RECORD YOUR NAME, ADVENTURER</div>
       <div class="field">
