the alert message pops up if you don't give a name

--- a/partials/NameSelect.html
+++ b/partials/NameSelect.html
@@ -6,10 +6,16 @@
       </div>
     </div>
 
+    <div class="newPinAlert alert alert-danger alert-dismissable"> 
+      <i class="fa fa-coffee"></i>
+      <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+      <strong>Give us your name, Adventurer!</strong>
+    </div>
+
     <div class="card__button">
       <a class="card__link btn btn--big btn--orange" 
          next="card--class" ng-click="setPlayerName()">
-        <span class="btn__prompt">></span>
+        <span class="btn__prompt"></span>
         <span class="btn__text">Select class</span>
       </a>
     </div>
