--- a/partials/ClassSelect.html
+++ b/partials/ClassSelect.html
@@ -1,106 +1,32 @@
-<section id="class-select" class="card card--class" ng-controller="ClassCtrl">
+<section id="class-select" class="card card--class" ng-controller="ClassSelectCtrl">
       <div class="card__prompt">
         <div>CHOOSE YOUR PATH</div>
         <div>
-          <a class="card__back btn btn--small" 
+          <a class="card__back btn btn--small"
              href="#"
              previous="card--name">
             <span class="btn__prompt">&lt;</span>
             <span class="btn__text">Back</span>
-          </a>          
+          </a>
         </div>
       </div>
 
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-4">
-            <div class="card__button">
+            <div ng-repeat="class in classes" class="card__button" ng-click="setPlayerClass(class)">
               <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Warrior</span>
-              </a>
-            </div>      
-            
-            <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Valkyrie</span>
-              </a>
-            </div>      
-            
-            <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">berserker</span>
-              </a>
-            </div>      
-            
-            <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Monk</span>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-sm-4">
-            <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Wizard</span>
-              </a>
-            </div>
-            
-            <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Sorcerer</span>
-              </a>
-            </div>
-            
-            <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Conjurer</span>
-              </a>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Thief</span>
-              </a>
-            </div>
-            
-            <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Ninja</span>
-              </a>
-            </div>
-
-            <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Assassin</span>
-              </a>
-            </div>
-
-            <div class="card__button">
-              <a class="class__link btn btn--big btn--yellow" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">surprise me</span>
+                <span class="btn__prompt"></span>
+                <span class="btn__text">{{class}}</span>
               </a>
             </div>
           </div>
         </div>
       </div>
       <div class="card__button">
-        <a class="card__link btn btn--big btn--orange" 
-           href="#" 
+        <a class="card__link btn btn--big btn--orange"
            next="card--weapon">
-          <span class="btn__prompt">></span>
+          <span class="btn__prompt"></span>
           <span class="btn__text">Select weapon</span>
         </a>
       </div>
