the weapons are showing and storing in the BattleFactoy

--- a/partials/WeaponSelect.html
+++ b/partials/WeaponSelect.html
@@ -1,4 +1,4 @@
- <section id="weapon-select" class="card card--weapon" ng-controller="WeaponCtrl">
+ <section id="weapon-select" class="card card--weapon">
       <div class="card__prompt">
         <div>choose your weapon</div>
         <div>
@@ -11,6 +11,14 @@
         </div>
       </div>
 
+      <div class="card__button" ng-repeat="each in weapons">
+        <a class="class__link btn btn--big btn--blue" ng-click="setWeapon(each)">
+          <span class="btn__prompt">></span>
+          <span class="btn__text">{{each}}</span>
+        </a>
+      </div>
+
+
       <div class="card__button">
         <a class="card__link btn btn--big btn--orange" 
            href="#" 
@@ -19,4 +27,4 @@
           <span class="btn__text">defeat your enemies</span>
         </a>
       </div>
-    </section>
+  </section>
