--- a/partials/ClassSelect.html
+++ b/partials/ClassSelect.html
@@ -3,34 +3,18 @@
 
       <div class="card__prompt">
         <div>CHOOSE YOUR PATH</div>
-        <div>
-          <a class="card__back btn btn--small"
-             href="#"
-             previous="card--name">
-            <span class="btn__prompt">&lt;</span>
-            <span class="btn__text">Back</span>
-          </a>
-        </div>
       </div>
 
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-4">
-            <div ng-repeat="class in classes" class="card__button" ng-click="setPlayerClass(class)">
-              <a class="class__link btn btn--big btn--blue" href="#">
+          <div class="col-sm-4" ng-repeat="class in classes">
+            <div class="card__button" ng-click="setPlayerClass(class)">
+              <a class="class__link btn btn--big btn--blue">
                 <span class="btn__prompt"></span>
                 <span class="btn__text">{{class}}</span>
               </a>
             </div>
           </div>
         </div>
-      </div>
-      <div class="card__button">
-
-        <a class="card__link btn btn--big btn--orange"
-           next="card--weapon">
-          <span class="btn__prompt"></span>
-          <span class="btn__text">Select weapon</span>
-        </a>
       </div>
 </section>
