--- a/partials/Battle.html
+++ b/partials/Battle.html
@@ -1,44 +1,44 @@
 <div class="container-fluid">
 	<div class="row no-gutter">
-	  	  <div class="col-xs-4 col-height col-text">
+	  	<div class="col-xs-4 col-height col-text">
 
 	  	<div class="moveDown"></div>
 
 	        <article><strong>Name:</strong> {{player.name}}</article>
-		        <div>
-		          <img class="image" src="../images/barbarian2.jpg" alt="Player">
-		        </div>
-		      <div class="row">
-			      <div class="col-xs-2">
-			      	 <h4><strong>Health:</strong></h4>
-			      </div>
+	        <div>
+	          <img class="image" src="../images/barbarian2.jpg" alt="Player">
+	        </div>
+		      	<div class="row">
+				    <div class="col-xs-2">
+				    	<h4><strong>Health:</strong></h4>
+				    </div>
 			     	<div class="col-xs-10">
-				      <div class="progress inchDown">
+				      	<div class="progress inchDown">
 							  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
 							  aria-valuemin="0" aria-valuemax="100" style="width:{{player.healthbar}}%">
 							    {{player.health}}
 							  </div>
-							</div>
 						</div>
 					</div>
+				</div>
 
+		    <br>
 
-		      <br>
-		      <div>
+		    <div>
 		      	<ul class="list-group reset smallerText">
 		      		<li class="list-group-item"><small>Class: {{player.class.name}}</small></li>
 		      		<li class="list-group-item"><small>Attack: {{player.weapon.name}}{{player.spell.name}}</small></li>
-						  <li class="list-group-item"><small>Strength</small> <span class="badge">{{player.strength}}</span></li>
-						  <li class="list-group-item"><small>Intelligence</small> <span class="badge">{{player.intelligence}}</span></li> 
-						  <li class="list-group-item"><small>Max Damage</small> <span class="badge">{{player.weapon.damage}} {{player.spell.damage}}</span></li> 
-						</ul>
-		      </div>
+					<li class="list-group-item"><small>Strength</small> <span class="badge">{{player.strength}}</span></li>
+					<li class="list-group-item"><small>Intelligence</small> <span class="badge">{{player.intelligence}}</span></li> 
+					<li class="list-group-item"><small>Max Damage</small> <span class="badge">{{player.weapon.damage}} {{player.spell.damage}}</span></li> 
+				</ul>
+		    </div>
 
 
 	  </div>
 
 
-	  <div class="col-xs-4 col-height col-text">
+	<div class="col-xs-4 col-height col-text" id="battleLog">
 	  	<div class="BattleContext" ng-repeat="each in battleLog">
 	  		<p class="{{each.turn}} {{each.highlight}}">{{each.attacker}} hit {{each.attackee}} for {{each.damage}} hp!</p>
 	  	</div>
@@ -46,13 +46,13 @@
 	  		<p class="{{each.highlight}}">{{each.winner}} defeated {{each.loser}} for a final blow of {{each.damage}} damage!</p>
 	  	</div>
 
-			  	<div class="col-xs-10 align-bottom">
-			  		<button class="col-xs-3 btn-primary attack-btn initial" ng-click="attack()">Attack!</button>
-			  		<button class="col-xs-4 btn-warning attack-btn initial" ng-click="autoAttack()">Auto Attack</button>
-			  		<button class="col-xs-4 btn-danger attack-btn initial" ng-click="stopAutoAttack()">Stop Auto</button>
-			  	</div>	
+	  	<div class="btn-group btn-group-vertical">
+		  <button type="button" class="initial btn-primary" ng-click="attack()">Attack!</button>
+		  <button type="button" class="btn btn-warning" ng-click="autoAttack()">Auto Attack</button>
+		  <button type="button" class="btn btn-danger" ng-click="stopAutoAttack()">Stop Auto</button>
+		</div>
+	</div>
 
-	  </div>
 	  
 
 	  <div class="col-xs-4 col-height col-text">
