--- a/partials/Battle.html
+++ b/partials/Battle.html
@@ -21,6 +21,19 @@
 							</div>
 						</div>
 					</div>
+					<div class="row">
+			      <div class="col-xs-2">
+			      	 <h4><strong>Special:</strong></h4>
+			      </div>
+			     	<div class="col-xs-10">
+				      <div class="progress inchDown">
+							  <div class="progress-bar" role="progressbar" aria-valuenow="40"
+							  aria-valuemin="0" aria-valuemax="2" style="width:{{player.specialbar}}%">
+							    {{player.special}}
+							  </div>
+							</div>
+						</div>
+					</div>
 
 
 		      <br>
@@ -40,7 +53,7 @@
 
 	  <div class="col-xs-4 col-height col-text">
 	  	<div class="BattleContext" ng-repeat="each in battleLog">
-	  		<p class="{{each.turn}} {{each.highlight}}">{{each.attacker}} hit {{each.attackee}} for {{each.damage}} hp!</p>
+	  		<p class="{{each.turn}} {{each.highlight}}">{{each.string}}</p>
 	  	</div>
 	  	<div ng-repeat="each in winLog">
 	  		<p class="{{each.highlight}}">{{each.winner}} defeated {{each.loser}} for a final blow of {{each.damage}} damage!</p>
@@ -74,6 +87,19 @@
 							  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="40"
 							  aria-valuemin="0" aria-valuemax="100" style="width:{{enemy.healthbar}}%">
 							    {{enemy.health}}
+							  </div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+			      <div class="col-xs-2">
+			      	 <h4><strong>Special:</strong></h4>
+			      </div>
+			     	<div class="col-xs-10">
+				      <div class="progress inchDown">
+							  <div class="progress-bar" role="progressbar" aria-valuenow="40"
+							  aria-valuemin="0" aria-valuemax="2" style="width:{{enemy.specialbar}}%">
+							    {{enemy.special}}
 							  </div>
 							</div>
 						</div>
