meg boss mwhaha

--- a/partials/WeaponSelect.html
+++ b/partials/WeaponSelect.html
@@ -5,7 +5,7 @@
 
       <div class="card__button" ng-repeat="each in weapons">
         <a class="class__link btn btn--big btn--blue" ng-click="setWeapon(each)">
-          <span class="btn__prompt">></span>
+          <span class="btn__prompt"></span>
           <span class="btn__text">{{each}}</span>
         </a>
       </div>
