Final boss time

--- a/partials/Battle.html
+++ b/partials/Battle.html
@@ -41,10 +41,10 @@
 		      	<ul class="list-group reset smallerText">
 		      		<li class="list-group-item"><small>Class: {{player.class.name}}</small></li>
 		      		<li class="list-group-item"><small>Attack: {{player.weapon.name}}{{player.spell.name}}</small></li>
-						  <li class="list-group-item"><small>Strength</small> <span class="badge">{{player.strength}}</span></li>
-						  <li class="list-group-item"><small>Intelligence</small> <span class="badge">{{player.intelligence}}</span></li>
-						  <li class="list-group-item"><small>Dexterity</small> <span class="badge">{{player.dexterity}}</span></li> 
-						  <li class="list-group-item"><small>Max Damage</small> <span class="badge">{{player.weapon.damage}} {{player.spell.damage}}</span></li> 
+						  <li class="list-group-item"><small>Strength</small> <span class="badge bigger-plz">{{player.strength}}</span></li>
+						  <li class="list-group-item"><small>Intelligence</small> <span class="badge bigger-plz">{{player.intelligence}}</span></li>
+						  <li class="list-group-item"><small>Dexterity</small> <span class="badge bigger-plz">{{player.dexterity}}</span></li> 
+						  <li class="list-group-item"><small>Max Damage</small> <span class="badge bigger-plz">{{player.weapon.damage}} {{player.spell.damage}}</span></li> 
 						</ul>
 		      </div>
 
@@ -113,10 +113,10 @@
 		      	<ul class="list-group reset smallerText">
 		      		<li class="list-group-item"><small>Class: {{enemy.class.name}}</small></li>
 		      		<li class="list-group-item"><small>Attack: {{enemy.weapon.name}}</small></li>
-						  <li class="list-group-item"><small>Strength</small> <span class="badge">{{enemy.strength}}</span></li>
-						  <li class="list-group-item"><small>Intelligence</small> <span class="badge">{{enemy.intelligence}}</span></li>
-						  <li class="list-group-item"><small>Dexterity</small> <span class="badge">{{enemy.dexterity}}</span></li> 
-						  <li class="list-group-item"><small>Max Damage</small> <span class="badge">{{enemy.weapon.damage}}</span></li> 
+						  <li class="list-group-item"><small>Strength</small> <span class="badge bigger-plz">{{enemy.strength}}</span></li>
+						  <li class="list-group-item"><small>Intelligence</small> <span class="badge bigger-plz">{{enemy.intelligence}}</span></li>
+						  <li class="list-group-item"><small>Dexterity</small> <span class="badge bigger-plz">{{enemy.dexterity}}</span></li> 
+						  <li class="list-group-item"><small>Max Damage</small> <span class="badge bigger-plz">{{enemy.weapon.damage}}</span></li> 
 						</ul>
 		      </div>
 
